get departures by stop

--- a/app/templates/stops.html
+++ b/app/templates/stops.html
@@ -7,7 +7,7 @@
       </label>
     </div>
     <ion-list>
-      <ion-item ng-repeat="stop in stops | filter:query" href="#/app/stop/{{stop.stop_id}}">
+      <ion-item ng-repeat="stop in stops | filter:query" href="#/app/stops/{{stop.stop_id}}">
         {{stop.stop_name}}
       </ion-item>
     </ion-list>
