--- a/app/templates/stops.html
+++ b/app/templates/stops.html
@@ -1,9 +1,9 @@
 <ion-view view-title="Stops">
   <ion-content>
-    <div class="list list-inset">
-      <label class="item item-input">
-        <i class="icon ion-search placeholder-icon"></i>
-        <input type="text" placeholder="Search" ng-model="query">
+    <div class="bar bar-header item-input-inset">
+      <label class="item-input-wrapper">
+        <i class="icon ion-ios7-search placeholder-icon"></i>
+        <input type="search" placeholder="Search" ng-model="query" ng-change="search(query)">
       </label>
     </div>
     <ion-list>
