--- a/app/templates/stopinfo.html
+++ b/app/templates/stopinfo.html
@@ -6,8 +6,13 @@
     </div>
   </ion-header-bar>
   <ion-content>
+    <div class="card">
+      <div class="item item-divider">
+        Buses that serve this stop
+      </div>
     <ion-list class="list-group ion-android-list">
       <ion-item ng-repeat="bus in buses | orderBy: 'route_long_name'" style="background-color:{{bus.route_color}};color:{{bus.route_text_color}};border-color:{{bus.route_color}};border-radius:2px">{{bus.route_short_name}} {{bus.route_long_name}}</ion-item>
     </ion-list>
+      </div>
   </ion-content>
 </ion-modal-view>
