-IonIcons added to bower -Implemented favorites system -Writing and Reading favorites list from disk

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -23,7 +23,7 @@
           Bus Stop Search
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/search">
-          <i class="icon ion-heart"></i>
+          <i class="icon ion-android-star"></i>
           Favorites
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/browse">
@@ -31,8 +31,8 @@
           Get Nearest Bus Stops
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/playlists">
-          <i class="icon ion-ios-cloud"></i>
-          Should I Walk or Ride?
+          <i class="icon ion-android-walk" style="font-size: 32px"></i>
+          Should I Walk or Ride??
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/browse">
           <i class="icon ion-gear-b"></i>
