--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -22,8 +22,8 @@
           <i class="icon ion-search"></i>
           Bus Stop Search
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/search">
-          <i class="icon ion-android-star"></i>
+        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/favorites">
+          <i class="icon ion-heart"></i>
           Favorites
         </ion-item>
         <ion-item class="item-icon-left" nav-clear menu-close href="#/app/browse">
