implemented GPS nearest stops

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -26,7 +26,7 @@
           <i class="icon ion-heart"></i>
           Favorites
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/browse">
+        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/gps">
           <i class="icon ion-location"></i>
           Get Nearest Bus Stops
         </ion-item>
