--- a/app/templates/stops.html
+++ b/app/templates/stops.html
@@ -9,8 +9,8 @@
     <ion-list>
       <ion-item ng-repeat="stop in stops" href="#/app/stops/{{stop.i}}?stopName={{stop.n}}">
         {{stop.n}}
-        <ion-option-button class="button-positive icon-left ion-heart" ng-click="favorite(stop)" ng-show="functiontofindIndexByKeyValue(favorites,'i', stop.i) == -1">Favorite</ion-option-button>
-        <ion-option-button class="button-assertive icon-left ion-heart-broken" ng-click="unfavorite(stop)" ng-show="functiontofindIndexByKeyValue(favorites,'i', stop.i) > -1">Unfavorite</ion-option-button>
+        <ion-option-button class="button-positive icon-left ion-heart" ng-click="favorite(stop)" ng-show="functiontofindIndexByKeyValue(favorites,'i', stop.i) == -1"></ion-option-button>
+        <ion-option-button class="button-assertive icon-left ion-heart-broken" ng-click="unfavorite(stop)" ng-show="functiontofindIndexByKeyValue(favorites,'i', stop.i) > -1"></ion-option-button>
       </ion-item>
     </ion-list>
   </ion-content>
