--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -30,7 +30,7 @@
           <i class="icon ion-location"></i>
           Get Nearest Bus Stops
         </ion-item>
-        <ion-item nav-clear menu-close href="#/app/playlists">
+        <ion-item nav-clear menu-close href="#/app/walk">
           <i class="icon ion-android-walk" style="font-size: 32px"></i>
           Should I Walk or Ride??
         </ion-item>
