--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -34,9 +34,9 @@
           <i class="icon ion-android-walk" style="font-size: 32px"></i>
           Should I Walk or Ride??
         </ion-item>
-        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/browse">
-          <i class="icon ion-gear-b"></i>
-          Settings
+        <ion-item class="item-icon-left" nav-clear menu-close href="#/app/buses">
+          <i class="icon ion-android-bus"></i>
+          Buses
         </ion-item>
       </ion-list>
     </ion-content>
